--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+.DS_Store
+Slides/.DS_Store
+Templates/.DS_Store
+Tutorials/.DS_Store
 # History files
 .Rhistory
-
-.Rapp.history
-
+.Rapp.history 
 
 # Session Data files
 .RData
